# coinbot_mastodon

./: .gitignore  Cargo.toml  LICENSE  Readme.md
src/: coin_storage.rs  lib.rs  main.rs  mastodon.rs  post.rs  upbit.rs  util.rs
systemd/: coinbot_mastodon.service  coinbot_mastodon.timer
