[package]
name = "coinbot_mastodon"
version = "0.1.1"
authors = ["ChanHwi, Choi (aka Ch.) <ccwpc@hanmail.net>"]
edition = "2021"
license = "MIT"

[dependencies]
mammut = "0.13"
serde = "1.0"
serde_derive = "1.0"
toml = "0.5"
reqwest = "0.11"  # TODO: 0.11
serde_json = "1.0"
separator = "0.4"
anyhow = "1.0"
tokio = { version = "1.21", features=["full"] }